# mega65-libc

./: .clang-format  .codedocs  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Makefile_cc65  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cmake.yml
cc65/: Makefile
cc65/include/: conio.h  fcio.h  fileio.h  hal.h  mega65_memory.h  mega65_sdcard.h  memory.h  mouse.h  random.h  sdcard.h  targets.h  tests.h  time.h
cc65/src/: conio.c  debug.c  fat32.c  fcio.c  fdisk_fat32.c  fileio.s  hal.c  memory.c  memory_asm.s  mouse.c  random.c  sdcard.c  targets.c  tests.c  time.c
clang/: .gitignore  CMakeLists.txt  Makefile  README.md  debug.h  example.c  fat32.c  random.c  sdcard.c  tests.c
clang/include/: sdcard.h  targets.h  tests.h  time.h
clang/src/: debug.c  fat32.c  fileio.s  hal.c  main.c  memory.c  random.c  sdcard.c  tests.c  time.c
clang/tests/: CMakeLists.txt
cmake/: mega65libcConfig.cmake
doc/: CMakeLists.txt  Doxyfile  m65guide.py
include/: conio.h  debug.h  dirent.h  fcio.h  fileio.h  hal.h  memory.h  mouse.h  random.h  sdcard.h  targets.h  tests.h  time.h
include/mega65/: conio.h  debug.h  dirent.h  fcio.h  fileio.h  hal.h  math.h  memory.h  mouse.h  random.h  sdcard.h  targets.h  tests.h  time.h
kickc/include/: targets.h
llvm/: conio.c  conio.h  debug.c  hal.h  memory.c  memory.h  mouse.c
src/: CMakeLists.txt  conio.c  debug.c  fat32.c  fcio.c  hal.c  math.c  memory.c  mouse.c  random.c  sdcard.c  targets.c  tests.c  time.c
src/cc65/: dirent.s  fileio.s
src/kickc/: dirent.s
src/llvm/: dirent.s  fileio.s  memory_asm.s
tests/: CMakeLists.txt  test-fileio.c  test-integer-size.c  test-math.c  test-memory.c  test-time.c  time.c
vbcc/include/: memory.h
